--- a/Travel/templates/user/forget_new.html
+++ b/Travel/templates/user/forget_new.html
@@ -1,7 +1,7 @@
 {% extends 'user/login.html' %}
 {%block title%}找回密码{%endblock title%}
 {%block head%}找回密码{%endblock head%}
-{%block post%}/user/forget{%endblock post%}
+{%block post%}/user/getpwd{%endblock post%}
 {%block css%}<link rel="stylesheet" href="/static/css/user/forget.css">{%endblock css%}
 {%block body_head%}找回密码<a href="/user/login">返回登录</a>{%endblock body_head%}
 {%block pwd%}
