--- a/Travel/templates/trip/order.html
+++ b/Travel/templates/trip/order.html
@@ -34,7 +34,7 @@
                     <ol class='info1'>
                         <li><a href="/user/topUp">我的钱包</a></li>
                         <li><a href="/user/cart">我的订单</a></li>
-                        <li><a href="/user">退出登录</a></li>
+                        <li><a href="/">退出登录</a></li>
                     </ol>
                 </li>
             </ul>
@@ -56,12 +56,12 @@
     {% endif %}
     <div class="center">
         <h1 class="logo">
-            <a href="/user" id="logoA">乐途旅行网</a>
+            <a href="/" id="logoA">乐途旅行网</a>
         </h1>
         <nav>
             <ul class="link">
                 <h1 class="none">网站导航</h1>
-                <li><a href="/user">首页</a></li>
+                <li><a href="/">首页</a></li>
                 <li><a href="/scenic">景点门票</a></li>
                 <li class="active"><a href="/trip">交通出行</a></li>
                 <li><a href="/hotel">酒店预定</a></li>
