--- a/Travel/templates/user/register.html
+++ b/Travel/templates/user/register.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div id="top">
-        <a href="/user">
+        <a href="/">
             <img src="/static/images/user/logo.png" alt="logo">
         </a>
         <span>免费注册</span>
-        <a href="/user"><span class="s1">返回首页</span></a>
+        <a href="/"><span class="s1">返回首页</span></a>
     </div>
     <div id="mian">
         <form action="/user/register" method="post">
@@ -42,7 +42,7 @@
         </form>
     </div>
     <div id="bottom">
-        <a href="/user">
+        <a href="/">
             <img src="/static/images/user/logo.png" alt="logo" id="logoImg">
         </a>
         <p>
