--- a/Travel/templates/hotel/order_hotel.html
+++ b/Travel/templates/hotel/order_hotel.html
@@ -35,7 +35,7 @@
                         <ol class='info1'>
                             <li><a href="/user/topUp">我的钱包</a></li>
                             <li><a href="/user/cart">我的订单</a></li>
-                            <li><a href="/user">退出登录</a></li>
+                            <li><a href="/">退出登录</a></li>
                         </ol>
                     </li>
                 </ul>
@@ -60,7 +60,7 @@
             <nav>
                 <ul class="link">
                     <h1 class="none">网站导航</h1>
-                    <li><a href="/index.html">首页</a></li>
+                    <li><a href="/">首页</a></li>
                     <li><a href="/scenic/">景点门票</a></li>
                     <li><a href="/trip/">交通出行</a></li>
                     <li class="active"><a href="/hotel/">酒店预定</a></li>
