--- a/Travel/templates/scenic/ticket.html
+++ b/Travel/templates/scenic/ticket.html
@@ -28,7 +28,7 @@
                         <ol class='info1'>
                             <li><a href="/user/topUp">我的钱包</a></li>
                             <li><a href="/user/cart">我的订单</a></li>
-                            <li><a href="/user">退出登录</a></li>
+                            <li><a href="/">退出登录</a></li>
                         </ol>
                     </li>
                 </ul>
@@ -50,7 +50,7 @@
         {% endif %}
         <div class="center">
             <h1 class="logo">
-                <a href="/user" id="logoA">乐途旅行网</a>
+                <a href="/" id="logoA">乐途旅行网</a>
             </h1>
 
             <nav>
