--- a/Travel/templates/trip/new_order.html
+++ b/Travel/templates/trip/new_order.html
@@ -29,12 +29,12 @@
 <header id="header">
     <div class="center">
         <h1 class="logo">
-            <a href="/user" id="logoA">乐途旅行网</a>
+            <a href="/" id="logoA">乐途旅行网</a>
         </h1>
         <nav>
             <ul class="link">
                 <h1 class="none">网站导航</h1>
-                <li><a href="/user">首页</a></li>
+                <li><a href="/">首页</a></li>
                 <li><a href="/scenic">景点门票</a></li>
                 <li class="active"><a href="/trip">交通出行</a></li>
                 <li><a href="/hotel">酒店预定</a></li>
