--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -24,7 +24,7 @@
                             <li><a href="/user/topUp">我的钱包</a></li>
                             <li><a href="/user/cart">我的订单</a></li>
                             <li><a href="">历史订单</a></li>
-                            <li><a href="/user">退出登录</a></li>
+                            <li><a href="/">退出登录</a></li>
                         </ol>
                     </li>
                 </ul>
@@ -46,12 +46,12 @@
     {% endif %}
     <div class="center">
         <h1 class="logo">
-            <a href="/user/index" id="logoA">乐途旅行网</a>
+            <a href="/" id="logoA">乐途旅行网</a>
         </h1>
         <nav>
             <ul class="link">
                 <h1 class="none">网站导航</h1>
-                <li class="active"><a href="/user/index">首页</a></li>
+                <li class="active"><a href="/">首页</a></li>
                 <li><a href="/scenic">景点门票</a></li>
                 <li><a href="/trip">交通出行</a></li>
                 <li><a href="/hotel">酒店预定</a></li>
