选择器问题

--- a/Travel/templates/trip/new_order.html
+++ b/Travel/templates/trip/new_order.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="/static/css/trip/new_order.css">
     <!-- <script src="../js/Calendar.js"></script> -->
     <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/hotel/layDate-v5.0.9/laydate/laydate.js"></script> <!-- 改成你的路径 -->
+    <script src="../../static/js/hotel/layDate-v5.0.9/laydate/laydate.js"></script>
     <script>
         lay('#version').html('-v' + laydate.v);
 
         //执行一个laydate实例
         laydate.render({
-            elem: '#from_date' //指定元素,即你要输入的框的id号即可
+            elem: '#from_date'
         });
         laydate.render({
             elem: '#to_date' //指定元素,即你要输入的框的id号即可
@@ -65,7 +65,7 @@
                 <a href="###">云南(10)</a>
                 <a href="###">江苏(10)</a>
                 <a href="###">山东(10)</a>
-                <a href="###">河南(10)</a>/
+                <a href="###">河南(10)</a>
                 <a href="###">湖北(10)</a>
                 <a href="###">甘肃(10)</a>
                 <a href="###">河北(10)</a>
