--- a/Travel/templates/trip/order.html
+++ b/Travel/templates/trip/order.html
@@ -113,7 +113,7 @@
             <h2>热卖旅游</h2>
             <div class="figure">
                 <figure>
-                    <img src="/static/images/recommend/xian.jpg" alt="西安 2 日游">
+                    <img src="/static/images/recommend/xian.jpleeg" alt="西安 2 日游">
                     <figcaption>西安 2 日游</figcaption>
                 </figure>
                 <figure><img src="/static/images/recommend/beijing.jpg" alt="北京 5日 4晚 游">
