--- a/Travel/static/css/home/home.css
+++ b/Travel/static/css/home/home.css
@@ -202,7 +202,7 @@
     font-size: 14px;
     padding: 5px 0 0 0;
     letter-spacing: 1px;
-    line-height: 1.5px;
+    /* line-height: 1.5px; */
     height: 42px;
     overflow: auto;
 }
