--- a/Travel/templates/user/login.html
+++ b/Travel/templates/user/login.html
@@ -46,7 +46,7 @@
                 </div>
                 {%block giveup%}
                 <div class="savePwd">
-                    <input type="checkbox" name="savePwd" >自动登录
+                    <input type="checkbox" name="savePwd" >记住密码
                     <a href="/user/forget">忘记密码?</a>
                 </div>
                 {%endblock giveup%}
