--- a/Travel/templates/scenic/information02.html
+++ b/Travel/templates/scenic/information02.html
@@ -15,15 +15,15 @@
 
 <body>
     <header id="header">
-        {% if uname %}
+        {% if request.session.userinfo %}
         <div id="cart">
             <b>
                 <ul>
-                    <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
+                    <li class="home"><a href="javascript:void(0)">欢迎您,{{ request.session.userinfo.uname }}</a>
                         <ol class='info1'>
                             <li><a href="/user/topUp">我的钱包</a></li>
                             <li><a href="/user/cart'">我的订单</a></li>
-                            <li><a href="/">退出登录</a></li>
+                            <li><a href="/user/logout">退出登录</a></li>
                         </ol>
                     </li>
                 </ul>
