--- a/Travel/templates/index.html
+++ b/Travel/templates/index.html
@@ -22,8 +22,8 @@
                     <li class="home"><a href="javascript:void(0)">欢迎您,{{ uname }}</a>
                         <ol class='info1'>
                             <li><a href="/user/topUp">我的钱包</a></li>
-                            <li><a href="/user/cart">我的订单</a></li>
-                            <li><a href="/user/order">历史订单</a></li>
+                            <li><a href="/user/cart.html">我的订单</a></li>
+                            <li><a href="/user/order.html">历史订单</a></li>
                             <li><a href="/user">退出登录</a></li>
                         </ol>
                     </li>
