--- a/Travel/templates/hotel/order_hotel.html
+++ b/Travel/templates/hotel/order_hotel.html
@@ -152,7 +152,8 @@
                 <a href="">花样土耳其 10 日游</a>
             </div>
             <div class="out-form">
-                <div class="form">
+                <form action="/hotel" method="post">
+                    <div class="form">
                     <h2>酒店预订</h2>
                     <p>
                         <ul class="infor">
@@ -217,6 +218,8 @@
 
                     </div>
                 </div>
+                </form>
+
                 <div>
                     <img src="../../static/images/hotel/out-form-img.jpeg">
                 </div>
@@ -227,6 +230,9 @@
                 <ul>
                     <li>热门品牌：</li>
                     <li><a href="">全部</a></li>
+                  <!--  {#  {% for id in list_id02 %}
+                        <li><a href="javascript:void(0)">{{ hotel_name }}</a></li>
+                        {% endfor %}#}-->
                     <li><a href="javascript:void(0)">富力希尔顿</a></li>
                     <li><a href="javascript:void(0)">锦江之星</a></li>
                     <li><a href="javascript:void(0)">汉庭连锁</a></li>
@@ -234,6 +240,19 @@
                     <li><a href="javascript:void(0)">爱情情侣</a></li>
                 </ul>
                 <div class="hotel_imfor">
+                <!--{% for id in list_id %}
+
+
+
+
+                    <figure class="hotel_figure">
+                        <img src="/static/images/hotel/{{ id.hotel_p }}/11.png" alt="The Pulpit Rock" class="hotel_img">
+                        <span class="hotel_name"><{{ hotel_name }}/span> {{ hotel_level }}
+                        <a href="/hotel/id">点击进入</a>
+                    </figure>
+                   {% endfor %}
+
+                    #}-->
                     <figure class="hotel_figure">
                         <img src="/static/images/hotel/4/1/11.png" alt="The Pulpit Rock" class="hotel_img">
                         <span class="hotel_name">爱情情侣</span>酒店 主题套房
