--- a/Travel/templates/trip/new_order.html
+++ b/Travel/templates/trip/new_order.html
@@ -150,24 +150,25 @@
                 <li><a href="###">往返</a></li>
 
             </ul>
-            </p>
+
             <form action="/trip/search" method="get">
                 <div class="left">
                     <p>
                         <label for="from_city">出发城市</label>
-                        <input type="text" name="from_city" id="from_city">
+                        <input type="text" name="from_city" id="from_city" placeholder="{{ from_station }}">
                         <label for="to_city">到达城市</label>
-                        <input type="text" name="to_city" id="to_city">
+                        <input type="text" name="to_city" id="to_city" placeholder="{{ to_station }}">
                     </p>
 
                 </div>
                 <div class="center">
                     <p>
                         <label for="from_day">出发时间</label>
-                        <input type="text" name="from_day" class="demo-input" placeholder="请选择日期" id="from_date"
+                        <input type="text" name="from_day" class="demo-input" placeholder="{{ from_date }}"
+                               id="from_date"
                                autocomplete="off">
                         <label for="to_day">返回时间</label>
-                        <input type="text" name="to_day" class="demo-input" placeholder="请选择日期" id="to_date"
+                        <input type="text" name="to_day" class="demo-input" placeholder="{{ to_date }}" id="to_date"
                                autocomplete="off">
                     </p>
 
@@ -194,6 +195,8 @@
                 <li>南京</li>
             </ul>
             <form action="">
+            </form>
+            <div id="roll">
                 <table id="tab">
                     <thead>
                     <tr class="th" id="float">
@@ -255,15 +258,14 @@
                             <td width="66" colspan="1" rowspan="1">{{ x.14 }}</td>
                             <td width="66" colspan="1" rowspan="1">{{ x.15 }}</td>
                             <td width="66" colspan="1" rowspan="1">{{ x.16 }}</td>
-                            <td class="last" colspan="1" rowspan="1">{{ x.17 }}</td>
+                            <td class="last" colspan="1" rowspan="1"><a href="javascript:void (0)">{{ x.17 }}</a></td>
                         </tr>
 
                     {% endfor %}
-
-
                     </tbody>
                 </table>
-            </form>
+            </div>
+
         </div>
     </div>
 </div>
