酒店天气预报

--- a/Travel/templates/hotel/hotel_ticket.html
+++ b/Travel/templates/hotel/hotel_ticket.html
@@ -89,7 +89,7 @@
         <div class="sDetails">
            <div class="hotel_info">
                <div id="hotel_info_1">4.5分</div>
-               <a href="##">1345位住客已评论</a>
+               <a href="##">{{ order_count }}位住客已评论</a>
 
            </div  >
            <div class="hotel_info">2011年装修 2011年开业
