--- a/Travel/templates/scenic/information.html
+++ b/Travel/templates/scenic/information.html
@@ -133,7 +133,7 @@
                 <h2>旅游百宝箱</h2>
                 <div class="box">
                     <a href="###" class="trea1">天气预报</a>
-                    <a href="###" class="trea2">火车票查询</a>
+                    <a href="/trip" class="trea2">火车票查询</a>
                     <a href="###" class="trea3">航空查询</a>
                     <a href="###" class="trea4">地铁线路查询</a>
                 </div>
