--- a/Travel/templates/trip/new_order.html
+++ b/Travel/templates/trip/new_order.html
@@ -259,7 +259,7 @@
                             <td width="66" colspan="1" rowspan="1">{{ x.14 }}</td>
                             <td width="66" colspan="1" rowspan="1">{{ x.15 }}</td>
                             <td width="66" colspan="1" rowspan="1">{{ x.16 }}</td>
-                            <td class="last" colspan="1" rowspan="1"><a href="javascript:void (0)">{{ x.17 }}</a></td>
+                            <td class="last" colspan="1" rowspan="1"><a href="javascript:void (0)" id="last">{{ x.17 }}</a></td>
                         </tr>
 
                     {% endfor %}
