--- a/Travel/templates/scenic/ticket.html
+++ b/Travel/templates/scenic/ticket.html
@@ -77,11 +77,11 @@
             <div id="thumbs">
                 <div id="nav-left-thumbs"></div>
                 <div id="pics-thumbs">
-                    <img src="{% static 'images/scenic/info/1.jpg' %}" alt="Nature1" />
-                    <img src="{% static 'images/scenic/info/2.jpg' %}" alt="Nature2" />
-                    <img src="{% static 'images/scenic/info/3.jpg' %}" alt="Nature3" />
-                    <img src="{% static 'images/scenic/info/4.jpg' %}" alt="Nature4" />
-                    <img src="{% static 'images/scenic/info/5.jpg' %}" alt="Nature5" />
+                    <img src="{% static 'images/scenic/info/h1.jpg' %}" alt="Nature1" />
+                    <img src="{% static 'images/scenic/info/h2.jpg' %}" alt="Nature2" />
+                    <img src="{% static 'images/scenic/info/h3.jpg' %}" alt="Nature3" />
+                    <img src="{% static 'images/scenic/info/h4.jpg' %}" alt="Nature4" />
+                    <img src="{% static 'images/scenic/info/h5.jpg' %}" alt="Nature5" />
 
                 </div>
                 <div id="nav-right-thumbs"></div>
